--- a/main.html
+++ b/main.html
@@ -8,17 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div id="buttons">
-        <button class="btn">applause</button>
-        <button class="btn">boo</button>
-        <button class="btn">gasp</button>
-        <button class="btn">tada</button>
-        <button class="btn">victory</button>
-        <button class="btn">wrong</button>
-        <button class="stop">stop</button>
-    </div>
-	
-	<script type="text/javascript" src="./script.js">
+	<div id="buttons">
+		<button class="btn" onclick="playsound('applause.mp3')">applause</button>
+		<button class="btn" onclick="playsound('sound2.mp3')">boo</button>
+		<button class="btn" onclick="playsound('sound3.mp3')">gasp</button>
+		<button class="btn" onclick="playsound('sound3.mp3')">tada</button>
+		<button class="btn" onclick="playsound('sound3.mp3')">victory</button>
+		<button class="btn" onclick="playsound('sound3.mp3')">wrong</button>
+		<button class="btn stop" onclick="stopsound()">Stop</button>
+	</div>
+	<audio id="audio"></audio>
+    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
